--- a/angular-crud-campaigns/package.json
+++ b/angular-crud-campaigns/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.9",
     "express": "^4.18.2",
+    "json-server": "^1.0.0-alpha.23",
     "ng-multiselect-dropdown": "^1.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
